spade-tests/src/snapshots/spade_tests__const_generics__int_literal_in_where_clause_trait_bound_rhs.snap
---
source: spade-tests/src/const_generics.rs
---
fn test<T>()
    where T: 1
{}


error: Unexpected `integer`, expected `Identifier`
  ┌─ testinput:2:14
  │
2 │     where T: 1
  │              ^ expected `Identifier`
